# IS-Ontology

./: .env.prod  README.md  docker-compose.yml  get_requirements.sh  pyproject.toml
IS_ontology/: crf_model.pickle  entrypoint.sh  manage.py  requirements.txt
IS_ontology/IS_ontology/: settings.py  urls.py  wsgi.py
IS_ontology/IS_ontology/Accounts/: apps.py  urls.py  views.py
IS_ontology/IS_ontology/Clf/: apps.py  urls.py  views.py
IS_ontology/IS_ontology/Ie/: ai_utils.py  apps.py  database.py  graph_repositories.py  urls.py  views.py
IS_ontology/IS_ontology/Notes/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
IS_ontology/IS_ontology/api/: apps.py  urls.py  views.py
IS_ontology/IS_ontology/fixtures/: data.json
IS_ontology/components/: urls.py  views.py
IS_ontology/static/: graph.js  graph.js.save
IS_ontology/static/css/: main.css
IS_ontology/static/my_model/: config.cfg  meta.json
IS_ontology/templates/: add.html  base.html  clf.html  companies.html  eng_rate.html  exp_rate.html  fstek.html  fz.html  graph.html  ie.html  index.html  main.html  members.html  page_InputNote.html  page_NoteDetails.html  page_NotesList.html  page_StartPage.html  pagination.html  persons.html  pp.html  predicates.html  register.html  register_done.html  rep-2021-aug.html  terms.html  terms_table.html  terms_to_vote.html  triples_to_vote.html  triplet_table.html  triplets.html
docker/nginx/: Dockerfile  IS_ontology.conf  nginx.conf
docker/python/: Dockerfile
is-ontology-frontend-next/: Dockerfile  next.config.js  package.json
(+25 files in other folders)
